--- a/category.css
+++ b/category.css
@@ -1,21 +1,43 @@
 
+
+.body {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+
+}
+
 .insideBody {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    height: 70vh;
-    width: 100vw;
+    height: 50vh;
+    width: 80vw;
+
+    margin: -50px;
 }
 
+.buyBotton {
+    align-self: center;
+}
 
+.goodImg {
+    border: 2px solid blue;
+}
 
 .good {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    margin: 15px;
 }
 
 
-.
+.main {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    margin: 0;
+    padding: 0;
+}
 
 
 .basket img{
@@ -27,6 +49,8 @@
     grid-template-columns: repeat(4, 1fr);
     height: 30vh;
     width: 100vw;
+    margin: 0;
+    padding: 0;
     text-align: center;
     font-family: "Arial Black", Gadget, sans-serif;
 }
