--- a/basket.css
+++ b/basket.css
@@ -1,3 +1,65 @@
+
+
+.mainBody {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 0;
+}
+
+.goodImg {
+    border-radius: 30px;
+    border: 2px;
+    border-color: #b0c8f6;
+}
+
+.drum8 {
+    background-image: url("resources/drum8.jpg");
+}
+
+.btnOrdr {
+    font-family: "Arial Black", Gadget, sans-serif;
+    width: 8vw;
+    height: 3vw;
+}
+
+.deleteBotton {
+    align-self: center;
+    padding: 4vw;
+}
+
+.basketList {
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    margin-top: -930px;
+    padding: 0;
+
+}
+
+.basketHead {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0;
+    margin-left: 200px;
+
+}
+
+.good {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /*margin: 15px;*/
+    margin-left: 25vw;
+}
+
+.btn {
+    font-family: "Arial Black", Gadget, sans-serif;
+    border: none;
+    border-radius: 20px;
+    
+    background-color: #b0c8f6;
+    width: 7vw;
+    height: 3vw;
+}
+
 .basket img{
     width: 4vw;
 }
@@ -28,7 +90,7 @@ a:hover {
 }
 
 .navButton {
-    font-family: Helvetica;
+    font-family: "Arial Black", Gadget, sans-serif;
     font-size: x-large;
     font-feature-settings: normal;
     align-self: center;
